# yyds-pip

./: .gitignore  README.md  build.sh  pyproject.toml  setup.py
yyds_pip/: __init__.py  __version__.py  cli.py
yyds_pip.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
