[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yyds-pip"
version = "0.1.0"
description = "A high-performance, user-friendly, and beautiful PyPI mirror source manager."
readme = "README.md"
authors = [
    { name = "yyds-fast Team" }
]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.0.0",
    "rich>=12.0.0",
]

[project.scripts]
yyds-pip = "yyds_pip.cli:main"
